--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -79,12 +79,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="38dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="386dp"
         android:background="@color/colorAccent"
         android:text="Delete"
         android:textColor="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/update"
         app:layout_constraintEnd_toStartOf="@+id/update"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/update" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
